--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 </head>
 <body>
-    <h1>Number to Guess: <span id="targetNumber"></span></h1>
+    <h1>Target Number: <span id="targetNumber"></span></h1>
     <h1>Your Score: <span id="score"></span></h1>
     <h3>Wins: <span id="wins"></span></h3>
     <h3>Losses: <span id="losses"></span></h3>
-    <div id="crystals">
+    <div id="load-crystals">
         <button type="button" class="crystal-value" id="js-button" value="0">
             <img class="crystal-image" src="assets/images/redCrystal.jpeg" width=100px height=100px>
         </button>
